# nhci

./: .gitignore  .gitmodules
drv/: CMakeLists.txt  nhci.c  toolchain.cmake
fw/: CMakeLists.txt  attr.list  attr.py  conf.py  conf.v  ic.v  io.pcf  pll.v  rom.v  sim.v  sim1_main.cpp  spi.py  spi.v  test.py  top.v
sch/: FPGA.sch  fp-info-cache  fp-lib-table  nhci-cache.lib  nhci.kicad_pcb  nhci.pro  nhci.sch  nhci.sch-bak  prog-cache.lib  prog.dsn  prog.kicad_pcb  prog.pro  prog.rules  prog.sch  prog.ses  pwr.sch  sym-lib-table  usbh.sch
sch/NHCI_V1.0/: nhci-B_Cu.gbr  nhci-B_Mask.gbr  nhci-B_Paste.gbr  nhci-B_SilkS.gbr  nhci-Edge_Cuts.gbr  nhci-F_Cu.gbr  nhci-F_Mask.gbr  nhci-F_Paste.gbr  nhci-F_SilkS.gbr  nhci-In1_Cu.gbr  nhci-In2_Cu.gbr  nhci-job.gbrjob  nhci.drl
sch/NHCI_V1.1/: nhci-B_Cu.gbr  nhci-B_Mask.gbr  nhci-B_Paste.gbr  nhci-B_SilkS.gbr  nhci-Edge_Cuts.gbr  nhci-F_Cu.gbr  nhci-F_Mask.gbr  nhci-F_Paste.gbr  nhci-F_SilkS.gbr  nhci-In1_Cu.gbr  nhci-In2_Cu.gbr  nhci-job.gbrjob  nhci.drl
sch/NHCI_V2.0/: nhci-B_Cu.gbl  nhci-B_Mask.gbs  nhci-B_Paste.gbp  nhci-B_SilkS.gbo  nhci-Edge_Cuts.gm1  nhci-F_Cu.gtl  nhci-F_Mask.gts  nhci-F_Paste.gtp  nhci-F_SilkS.gto  nhci-In1_Cu.g2  nhci-In2_Cu.g3  nhci-NPTH.drl  nhci-PTH.drl
sch/PROG_V1.0/: prog-B_Cu.gbr  prog-B_Mask.gbr  prog-B_Paste.gbr  prog-B_SilkS.gbr  prog-Edge_Cuts.gbr  prog-F_Cu.gbr  prog-F_Mask.gbr  prog-F_Paste.gbr  prog-F_SilkS.gbr  prog-job.gbrjob  prog.drl
sch/ecad/74LVC8T245RHLRG4/: 74LVC8T245RHLRG4.dcm  74LVC8T245RHLRG4.kicad_mod  74LVC8T245RHLRG4.lib  74LVC8T245RHLRG4.mod
sch/ecad/CLP-105-02-F-D/: CLP-105-02-F-D.dcm  CLP-105-02-F-D.lib  CLP-105-02-F-D.mod  CLP-105-02-XXX-D.kicad_mod
sch/ecad/ECS-5032MV-120-BM-TR/: ECS-5032MV-120-BM-TR.dcm  ECS-5032MV-120-BM-TR.lib  ECS-5032MV-120-BM-TR.mod  ECS5032MV120BMTR.kicad_mod
sch/ecad/FT2232HQ-TRAY/: FT2232HQ-TRAY.dcm  FT2232HQ-TRAY.lib  FT2232HQ-TRAY.mod  QFN50P900X900X90-65N-D.kicad_mod
sch/ecad/LT3030IFE#TRPBF/: LT3030IFE#TRPBF.dcm  LT3030IFE#TRPBF.lib  LT3030IFE#TRPBF.mod  SOP65P640X120-21N.kicad_mod
sch/ecad/MAX3421EEHJ+/: MAX3421EEHJ+.dcm  MAX3421EEHJ+.lib  MAX3421EEHJ+.mod  QFP50P700X700X120-32N.kicad_mod
sch/ecad/MTMS-105-02-T-D-002/: MTMS-105-02-T-D-002.dcm  MTMS-105-02-T-D-002.lib  MTMS-105-02-T-D-002.mod  MTMS10502TD002.kicad_mod
sch/ecad/USB3075-30-A/: USB3075-30-A.dcm  USB3075-30-A.lib  USB3075-30-A.mod  USB307530A.kicad_mod
sch/own/: KSM1131.kicad_mod  LM3526M.lib  N25Q032A13EF440F.kicad_mod  N25Q032A13EF440F.lib  PCMCIA_CARD.kicad_mod  PCMCIA_USB.lib
